<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Material Color Picker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="instagram">Instagram</string>
    <string name="github">Github</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="dribbble">Dribbble</string>
    <string name="developedby">Developed by <b>Anjith Sasindran</b></string>
    <string name="designby">Design inspired from <b>Lucas Bonomi</b></string>

</resources>
