<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/developedby"
        android:textSize="16sp"
        android:id="@+id/developer" />

    <com.wefika.flowlayout.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/website"
            android:textSize="16sp"
            android:text="@string/website"
            android:textColor="@color/dialogcolor"
            style="?android:borderlessButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/github"
            android:textSize="16sp"
            android:text="@string/github"
            android:textColor="@color/dialogcolor"
            style="?android:borderlessButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instagram"
            android:textSize="16sp"
            android:text="@string/instagram"
            android:textColor="@color/dialogcolor"
            style="?android:borderlessButtonStyle" />

    </com.wefika.flowlayout.FlowLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/designby"
        android:textSize="16sp"
        android:id="@+id/designer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dribbble"
        android:textSize="16sp"
        android:text="@string/dribbble"
        android:textColor="@color/dialogcolor"
        style="?android:borderlessButtonStyle" />

</LinearLayout>
