<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:id="@+id/developer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/website"
            android:layout_weight="1"
            android:text="@string/website"
            android:textColor="@color/dialogcolor"
            style="?android:borderlessButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/github"
            android:layout_weight="1"
            android:text="@string/github"
            android:textColor="@color/dialogcolor"
            style="?android:borderlessButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instagram"
            android:layout_weight="1"
            android:text="@string/instagram"
            android:textColor="@color/dialogcolor"
            style="?android:borderlessButtonStyle" />

        </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:id="@+id/designer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dribbble"
        android:text="@string/dribbble"
        android:textColor="@color/dialogcolor"
        style="?android:borderlessButtonStyle" />

</LinearLayout>